samples/_failures_safe/1761313429_3a06b8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9f9d0191.c: In function ‘main’:
./samples/SAFE/__tmp_9f9d0191.c:155:9: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  155 |         double ratio
      |         ^~~~~~
./samples/SAFE/__tmp_9f9d0191.c:155:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9f9d0191.c:155:9: error: expected declaration or statement at end of input
